--- a/.hintrc
+++ b/.hintrc
@@ -1,5 +1,14 @@
 {
   "extends": [
     "development"
-  ]
+  ],
+  "hints": {
+    "typescript-config/strict": "off",
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off"
+      }
+    ]
+  }
 }
