--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "axios": "^1.3.4",
     "daisyui": "^2.51.5",
+    "firebase": "^9.18.0",
     "plasmo": "0.67.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -31,8 +32,19 @@
     "typescript": "4.9.4"
   },
   "manifest": {
+    "key": "$CRX_PUBLIC_KEY",
     "host_permissions": [
       "https://*/*"
-    ]
+    ],
+    "permissions": [
+      "identity"
+    ],
+    "oauth2": {
+      "client_id": "$PLASMO_PUBLIC_FIREBASE_CLIENT_ID",
+      "scopes": [
+        "https://www.googleapis.com/auth/userinfo.email",
+        "https://www.googleapis.com/auth/userinfo.profile"
+      ]
+    }
   }
 }
